--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,15 +2,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/logintext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="login"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#03A9F4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.229" />
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:drawableRight="@drawable/email"
         android:ems="10"
         android:hint="e-mail"
         android:inputType="textEmailAddress"
@@ -25,6 +39,7 @@
         android:id="@+id/editText3"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:drawableRight="@drawable/password_foreground"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
@@ -38,7 +53,9 @@
         android:id="@+id/button"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:background="@drawable/rounded_button"
         android:text="sign in"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
