--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="login"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#03A9F4"
+        android:textColor="#4CAF50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.24"
@@ -24,10 +24,13 @@
         android:id="@+id/editText2"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:background="@drawable/login_field_rounded_button"
         android:drawableRight="@drawable/email"
         android:ems="10"
         android:hint="e-mail"
         android:inputType="textEmailAddress"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,10 +42,13 @@
         android:id="@+id/editText3"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:background="@drawable/login_field_rounded_button"
         android:drawableRight="@drawable/password_foreground"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +59,7 @@
         android:id="@+id/button"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/login_rounded_button"
         android:text="sign in"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
