--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,13 @@
         android:id="@+id/editText2"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:background="@drawable/field_rounded_button"
         android:drawableRight="@drawable/email"
         android:ems="10"
         android:hint=" e-mail"
         android:inputType="textEmailAddress"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -25,10 +28,13 @@
         android:id="@+id/editText3"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:background="@drawable/field_rounded_button"
         android:drawableRight="@drawable/password_foreground"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
