--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,4 +17,52 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="205dp"
+        android:layout_height="158dp"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="149dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GOALS"
+        tools:layout_editor_absoluteX="161dp"
+        tools:layout_editor_absoluteY="7dp" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="399dp"
+        android:layout_height="96dp"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="578dp" >
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_gallery"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="519dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_recent_history"
+        tools:layout_editor_absoluteX="308dp"
+        tools:layout_editor_absoluteY="519dp" />
+
+    <ImageButton
+        android:id="@+id/imageButton3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_compass"
+        tools:layout_editor_absoluteX="174dp"
+        tools:layout_editor_absoluteY="517dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
