--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,61 +8,77 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="205dp"
-        android:layout_height="158dp"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="149dp" />
+        android:layout_width="235dp"
+        android:layout_height="198dp"
+        android:layout_marginTop="45dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkProgress" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/checkProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GOALS"
         tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="7dp" />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="399dp"
-        android:layout_height="96dp"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="578dp" >
-
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+        tools:layout_editor_absoluteY="16dp" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/foodHistoryBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_gallery"
-        tools:layout_editor_absoluteX="35dp"
-        tools:layout_editor_absoluteY="519dp" />
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="608dp" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/activityHistoryBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_recent_history"
-        tools:layout_editor_absoluteX="308dp"
-        tools:layout_editor_absoluteY="519dp" />
+        tools:layout_editor_absoluteX="323dp"
+        tools:layout_editor_absoluteY="608dp" />
 
     <ImageButton
-        android:id="@+id/imageButton3"
+        android:id="@+id/homepageBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@android:drawable/ic_menu_compass"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="517dp" />
+        tools:layout_editor_absoluteX="177dp"
+        tools:layout_editor_absoluteY="608dp" />
+
+    <Button
+        android:id="@+id/foodItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="Add Food Item"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="360dp" />
+
+    <Button
+        android:id="@+id/futureActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Future Activity"
+        app:layout_constraintEnd_toStartOf="@+id/foodItem"
+        app:layout_constraintHorizontal_bias="0.307"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="360dp" />
+
+    <Button
+        android:id="@+id/setActivity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Current Activity"
+        app:layout_constraintBottom_toTopOf="@+id/homepageBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        app:layout_constraintVertical_bias="0.724" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
