--- a/app/src/main/res/layout/fragment_food_history.xml
+++ b/app/src/main/res/layout/fragment_food_history.xml
@@ -11,4 +11,11 @@
         android:layout_height="match_parent"
         android:text="food history fragment" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Button" />
+
 </FrameLayout>
