Fix issues arisen from merging.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -81,4 +81,15 @@
         app:layout_constraintTop_toBottomOf="@+id/progressBar2"
         app:layout_constraintVertical_bias="0.812" />
 
+    <Button
+        android:id="@+id/logoutBtn"
+        android:layout_width="88dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="24dp"
+        android:text="Log-out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.869"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
