Added '.setOnItemClickListener' for the ActivityHistoryFragment. (#7)
Nothing major.

--- a/app/src/main/res/layout/fragment_activity_history.xml
+++ b/app/src/main/res/layout/fragment_activity_history.xml
@@ -22,6 +22,8 @@
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:allowUndo="false"
+        android:background="@color/colorWhiteTransparent"
         android:ems="10"
         android:gravity="center"
         android:inputType="textPersonName"
@@ -31,4 +33,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.894" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
