--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,9 @@
             style="?android:progressBarStyleHorizontal"
             android:layout_width="230dp"
             android:layout_height="230dp"
-            android:progress="75"
+            android:visibility="invisible"
+            android:progress="0"
+            android:rotation="-90"
             android:progressDrawable="@drawable/circle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,20 +57,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <Button
-            android:id="@+id/stopBtn"
-            android:layout_width="185dp"
-            android:layout_height="185dp"
-            android:background="@drawable/activity_button"
-            android:enabled="false"
-            android:text="STOP"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/startBtn"
+            android:id="@+id/activityBtn"
             android:layout_width="185dp"
             android:layout_height="185dp"
             android:background="@drawable/activity_button"
