Added slider transition animation, however does not run yet, need to fix some errors.

--- a/app/src/main/res/layout/fragment_activity_history.xml
+++ b/app/src/main/res/layout/fragment_activity_history.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="56dp"
-    tools:context=".ActivityHistoryFragment" >
+    tools:context=".fragments.ActivityHistoryFragment" >
 
     <ListView
         android:id="@+id/activity_history_list"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +26,6 @@
         android:background="@color/colorWhiteTransparent"
         android:ems="10"
         android:gravity="center"
-        android:inputType="textPersonName"
         android:text="Activities"
         app:layout_constraintBottom_toTopOf="@+id/activity_history_list"
         app:layout_constraintEnd_toEndOf="parent"
