--- a/app/src/main/res/layout/fragment_add_future_activity.xml
+++ b/app/src/main/res/layout/fragment_add_future_activity.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.AddFutureActivity">
+    tools:context=".fragments.AddFutureActivityFragment">
 
     <TextView
         android:layout_width="match_parent"
