Refactor StandardProfile and LoginActivity.
Removed Repo parameters to StandardProfile as Repos are handled by di.
Refactor LoginActivity to contain dummy StandardProfile initialisation in single method.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <Button
-        android:id="@+id/setGoal"
+        android:id="@+id/goalBtn"
         android:layout_width="88dp"
         android:layout_height="39dp"
         android:layout_marginTop="32dp"
