--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,9 @@
         android:layout_width="88dp"
         android:layout_height="39dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/login_rounded_button"
         android:text="Goals"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +28,9 @@
         android:layout_width="92dp"
         android:layout_height="43dp"
         android:layout_marginTop="32dp"
+        android:background="@drawable/rounded_button"
         android:text="Log-out"
+        android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.921"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +101,7 @@
         android:layout_width="130dp"
         android:layout_height="28dp"
         android:layout_marginTop="31dp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/login_field_rounded_button"
         android:gravity="center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
