--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -3,32 +3,35 @@
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/extremelyLightGrey"
     android:padding="15dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:id="@+id/image"
-        android:src='@mipmap/ic_launcher'/>
+        android:src='@mipmap/ic_launcher' />
 
     <TextView
-        android:text="TestingPosition"
-        android:textColor="#000000"
+        android:id="@+id/image_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/image_name"
-        android:layout_toRightOf="@+id/image"
         android:layout_centerVertical="true"
         android:layout_marginLeft="30dp"
-        android:textSize="18sp"/>
+        android:layout_toRightOf="@+id/image"
+        android:text="TestingPosition"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/image_date"
-        android:text="Date: xx.xx.xx"
-        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/image_name"
         android:layout_marginLeft="30dp"
         android:layout_toRightOf="@+id/image"
-        android:layout_alignTop="@+id/image_name"/>
+        android:text="Date: xx.xx.xx"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 </RelativeLayout>
