added a test to see if profile gets updated after adding a consumable in foodfragment

--- a/app/src/main/res/layout/fragment_add_food_item.xml
+++ b/app/src/main/res/layout/fragment_add_food_item.xml
@@ -33,7 +33,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.252" />
+        app:layout_constraintVertical_bias="0.044" />
 
     <TextView
         android:id="@+id/gramMilText"
@@ -43,10 +43,10 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/BtnConfirmAddFood"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintHorizontal_bias="0.178"
         app:layout_constraintStart_toEndOf="@+id/editTextAmount"
         app:layout_constraintTop_toBottomOf="@+id/FoodTextView"
-        app:layout_constraintVertical_bias="0.511" />
+        app:layout_constraintVertical_bias="0.594" />
 
     <EditText
         android:id="@+id/editTextAmount"
@@ -54,11 +54,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
         android:hint="amount here"
+        android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/BtnConfirmAddFood"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/FoodTextView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.463" />
 
     <Button
         android:id="@+id/BtnConfirmAddFood"
